# DateTree

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  docker-compose.yaml
backend/: .env.example  CONTRIBUTING.md  LIST_CRUD_IMPLEMENTATION.md  README.md  pyproject.toml  pytest.ini  test.db  test_list_api.py
backend/alembic/: env.py
backend/alembic/versions/: 2db828c08be9_add_calendar_type_to_calendars_table.py  4ec405814072_initial_schema_with_list_listitem_model.py  64b7e4f72b1d_create_initial_tables_for_users_.py  8763bf7f0ac6_add_foreign_key_indexes_and_composite_.py  df619e1f0c40_initial_complete_schema.py  fddac6ca9795_add_is_active_field_to_users_table.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/core/: config.py  rate_limiter.py  security.py
backend/app/crud/: __init__.py  base.py  crud_calendar.py  crud_event.py  crud_list.py  crud_list_item.py  crud_user.py  crud_vote.py
backend/app/models/: __init__.py  base.py  calendar.py  enums.py  event.py  list.py  list_item.py  user.py  vote.py
backend/app/schemas/: __init__.py  calendar.py  event.py  list.py  list_item.py  token.py  user.py  vote.py
backend/blob/: README.md
backend/tests/: conftest.py  test_api_calendar.py  test_api_event.py  test_api_list.py  test_api_list_item.py  test_api_user.py  test_api_vote.py  test_crud_calendar.py  test_crud_event.py  test_crud_list.py  test_crud_list_item.py  test_crud_vote.py  test_schemas_list.py  test_schemas_new_entities.py
datetree_flutter/: README.md
(+89 files in other folders)
